<resources>
    <string name="app_name">Work Alley</string>
    <string name="username">Username</string>

    <string name="font_roboto_regular">sans-serif</string>
    <string name="font_roboto_light">sans-serif-light</string>
    <string name="font_roboto_condensed">sans-serif-condensed</string>
    <string name="font_roboto_thin">sans-serif-thin</string>
    <string name="font_roboto_medium">sans-serif-medium</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password?</string>
    <string name="new_account">Create New Account</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign UP</string>
    <string name="user">User</string>
    <string name="host">Host</string>
    <string name="host_name">Name</string>
    <string name="contact_number">Mobile Number</string>
    <string name="monthly_subscription">Monthly Subscription</string>
    <string name="recharge">Recharge</string>
    <string name="name">Name</string>
    <string name="book_seat">Book a seat</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="address1">Address Line 1</string>
    <string name="address2">Address Line 2</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="country">Country</string>
    <string name="continue_text">Continue</string>
    <string name="ok">OK</string>
    <string name="otp_text">OTP is send to your email</string>
    <string name="proceed">Proceed</string>
    <string name="logout">Logout</string>
    <string name="number_of_seat">Number of seat</string>
    <string name="save">Save</string>
    <string name="workspace_name">Workspace Name</string>
    <string name="waiting">Waiting for response</string>
    <string name="delete_workspace">Delete Workspace</string>
    <string name="no_internet_connection">No Internet</string>
    <string name="no_net_help_text">Please check your net connection</string>
    <string name="retry">Retry</string>
    <string name="available_seats">Seats available : %s</string>
</resources>
