<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/no_net_text"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/margin_20"
            android:src="@drawable/no_internet" />

        <TextView
            android:id="@+id/no_net_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/no_net_help_text"
            android:layout_marginBottom="@dimen/margin_20"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_20"
            android:fontFamily="@string/font_roboto_thin"
            android:gravity="center"
            android:text="@string/no_internet_connection"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_40" />

        <TextView
            android:id="@+id/no_net_help_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@string/font_roboto_thin"
            android:gravity="center"
            android:text="@string/no_net_help_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20" />

        <Button
            android:id="@+id/no_net_retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/no_net_help_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@color/colorAccent"
            android:fontFamily="@string/font_roboto_light"
            android:stateListAnimator="@null"
            android:text="@string/retry"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_12" />
    </RelativeLayout>
</FrameLayout>