<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginRight="@dimen/margin_30"
        android:layout_weight="1"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            float:fletPadding="@dimen/margin_5">

            <EditText
                android:id="@+id/user_name"
                style="@style/FloatingEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            float:fletPadding="@dimen/margin_5">

            <EditText
                android:id="@+id/password"
                style="@style/FloatingEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:enabled="false"
            android:text="@string/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@drawable/edit_text_bottom_line"
            android:fontFamily="@string/font_roboto_thin"
            android:paddingBottom="@dimen/margin_5"
            android:paddingLeft="@dimen/margin_5"
            android:paddingRight="@dimen/margin_5"
            android:text="@string/forget_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_10" />

        <TextView
            android:id="@+id/create_new_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_25"
            android:background="@drawable/edit_text_bottom_line"
            android:fontFamily="@string/font_roboto_thin"
            android:paddingBottom="@dimen/margin_5"
            android:paddingLeft="@dimen/margin_5"
            android:paddingRight="@dimen/margin_5"
            android:text="@string/new_account"
            android:textColor="@color/white" />
    </LinearLayout>


</LinearLayout>