<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_20"
        app:cardCornerRadius="@dimen/margin_4"
        app:cardElevation="@dimen/margin_2"
        app:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_20">

                    <EditText
                        android:id="@+id/email"
                        style="@style/FloatingEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_20">

                    <EditText
                        android:id="@+id/name"
                        style="@style/FloatingEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_20">

                    <EditText
                        android:id="@+id/password"
                        style="@style/FloatingEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_20">

                    <EditText
                        android:id="@+id/confirmPassword"
                        style="@style/FloatingEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/address"
                    style="@style/FloatingEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_20"
                    android:hint="@string/address" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_20"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/margin_4"
                    app:cardElevation="@dimen/margin_2"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_20"
                        android:orientation="vertical">

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_20"
                            android:layout_marginRight="@dimen/margin_20"
                            android:layout_marginTop="@dimen/margin_20"
                            android:textColorHint="@color/colorPrimary">

                            <EditText
                                android:id="@+id/address1"
                                style="@style/FloatingEditTextOppsite"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/address1" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_20"
                            android:layout_marginRight="@dimen/margin_20"
                            android:layout_marginTop="@dimen/margin_20"
                            android:textColorHint="@color/colorPrimary">

                            <EditText
                                android:id="@+id/address2"
                                style="@style/FloatingEditTextOppsite"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/address2" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_20"
                            android:layout_marginRight="@dimen/margin_20"
                            android:layout_marginTop="@dimen/margin_20"
                            android:textColorHint="@color/colorPrimary">

                            <EditText
                                android:id="@+id/city"
                                style="@style/FloatingEditTextOppsite"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/city" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_20"
                            android:layout_marginRight="@dimen/margin_20"
                            android:layout_marginTop="@dimen/margin_20"
                            android:textColorHint="@color/colorPrimary">

                            <EditText
                                android:id="@+id/state"
                                style="@style/FloatingEditTextOppsite"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/state" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_20"
                            android:layout_marginRight="@dimen/margin_20"
                            android:layout_marginTop="@dimen/margin_20"
                            android:textColorHint="@color/colorPrimary">

                            <EditText
                                android:id="@+id/pincode"
                                style="@style/FloatingEditTextOppsite"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/pincode" />
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/margin_20"
                            android:layout_marginRight="@dimen/margin_20"
                            android:layout_marginTop="@dimen/margin_20"
                            android:textColorHint="@color/colorPrimary">

                            <EditText
                                android:id="@+id/country"
                                style="@style/FloatingEditTextOppsite"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/country" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <Button
                    android:id="@+id/hostSignup"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/margin_30"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/sign_up" />
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>