<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_20"
        app:cardCornerRadius="@dimen/margin_4"
        app:cardElevation="@dimen/margin_2"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_50"
                android:fontFamily="@string/font_roboto_light"
                android:gravity="center"
                android:text="Enter OTP"
                android:textSize="@dimen/text_size_25" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_marginRight="@dimen/margin_30"
                android:layout_marginTop="@dimen/margin_30"
                android:gravity="center"
                android:text="@string/otp_text" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_70"
                android:layout_marginRight="@dimen/margin_70"
                android:layout_marginTop="@dimen/margin_30"
                android:gravity="center"
                android:inputType="number" />

            <Button
                android:id="@+id/proceed"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/margin_30"
                android:layout_marginLeft="@dimen/margin_20"
                android:layout_marginRight="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_30"
                android:text="@string/proceed" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>