<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_20"
        app:cardCornerRadius="@dimen/margin_4"
        app:cardElevation="@dimen/margin_2"
        app:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_80"
                    android:layout_marginRight="@dimen/margin_80"
                    android:src="@drawable/fb_connect"
                    android:visibility="gone" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_80"
                    android:layout_marginRight="@dimen/margin_80"
                    android:layout_marginTop="-40dp"
                    android:src="@drawable/g_connect"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginLeft="@dimen/margin_30"
                    android:layout_marginRight="@dimen/margin_30"
                    android:layout_marginTop="@dimen/margin_10"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_05"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="OR" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/margin_05"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center" />
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_20">

                    <EditText
                        android:id="@+id/email"
                        style="@style/FloatingEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_20">

                    <EditText
                        android:id="@+id/name"
                        style="@style/FloatingEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_20">

                    <EditText
                        android:id="@+id/password"
                        style="@style/FloatingEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_20">

                    <EditText
                        android:id="@+id/confirmPassword"
                        style="@style/FloatingEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/userSignup"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_30"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_30"
                    android:text="@string/sign_up" />
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</LinearLayout>